initial css and bootstrap foundation laid

--- a/Develop/output/main.html
+++ b/Develop/output/main.html
@@ -5,58 +5,60 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Company Contact Dashboard</title>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" 
+        rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     </head>
     <body>
-        <section class =" "> 
-            <section class = " ">
-                <div class = " ">
-                    <h1 class = " "></h1>
+        <section class ="container-fluid"> 
+            <section class = "row">
+                <div class = "mt-4 p-5 bg-primary text-white">
+                    <h1 class = "text-center">My Team</h1>
                 </div>
             </section>
-        </section
+        </section>
 
-        <section class =" ">
-            <div class = "">
+        <section class ="container col-12 p-3">
+            <div class = "row d-flex justify content-center">
 
                 
-    <section class = " ">
-        <div class = " ">
-            <h2>caborn</h2>
+    <section class = "card col-3 m-3">
+        <div class = "card-header">
+            <h2>ss</h2>
             <h3> Manager </h3>
-        </div
-        <div class = " ">
-            <ul class = " ">
-                <li class = " "> Employee ID: cabron</li>
-                <li class = " "> Email: <a href="mailto:cabron">cabron</a></li>
-                <li class = " "> Office Number: caborn</li>
+        </div>
+        <div class = "card-body bg-primary ">
+            <ul class = "list-group">
+                <li class = "list-group-item"> Employee ID: ss</li>
+                <li class = "list-group-item"> Email: <a href="mailto:ss">ss</a></li>
+                <li class = "list-group-item"> Office Number: ss</li>
             </ul>
         </div>
     </section>
 
-    <section class = " ">
-        <div class = " ">
-            <h2>cabron</h2>
+    <section class = "card col-3 m-3">
+        <div class = "card-header">
+            <h2>ss</h2>
             <h3> Engineer </h3>
-        </div
-        <div class = " ">
-            <ul class = " ">
-                <li class = " "> Employee ID: cabron</li>
-                <li class = " "> Email: <a href="mailto:cabron">cabron</a></li>
-                <li class = " "> Github: <a href="https://github.com/cabron">cabron</a></li>
+        </div>
+        <div class = "card-body bg-primary">
+            <ul class = "list-group">
+                <li class = "list-group-item"> Employee ID: ss</li>
+                <li class = "list-group-item"> Email: <a href="mailto:ss">ss</a></li>
+                <li class = "list-group-item"> Github: <a href="https://github.com/ss">ss</a></li>
             </ul>
         </div>
     </section>
 
-    <section class = " ">
-        <div class = " ">
-            <h2>cabron</h2>
-            <h3> Intern </h3>
-        </div
-        <div class = " ">
-            <ul class = " ">
-                <li class = " "> Employee ID: caborn</li>
-                <li class = " "> Email: <a href="mailto:cabron">cabron</a></li>
-                <li class = " "> School: caborn</li>
+    <section class = "card col-3 m-3">
+        <div class = "card-header">
+            <h2 class = "card-title">ss</h2>
+            <h3 class = "card-title"> Intern </h3>
+        </div>
+        <div class = "card-body bg-primary">
+            <ul class = "list-group">
+                <li class = "list-group-item"> Employee ID: ss</li>
+                <li class = "list-group-item"> Email: <a href="mailto:ss">ss</a></li>
+                <li class = "list-group-item"> School: s</li>
             </ul>
         </div>
     </section>
