--- a/Develop/output/main.html
+++ b/Develop/output/main.html
@@ -8,11 +8,11 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" 
         rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     </head>
-    <body>
+    <body class ="bg-light"
         <section class ="container-fluid"> 
             <section class = "row">
-                <div class = "mt-4 p-5 bg-primary text-white">
-                    <h1 class = "text-center">My Team</h1>
+                <div class = "mt-4 p-5 bg-success text-dark">
+                    <h1 class = "text-center">Company Contact Dashboard</h1>
                 </div>
             </section>
         </section>
@@ -21,44 +21,44 @@
             <div class = "row d-flex justify content-center">
 
                 
-    <section class = "card col-3 m-3">
-        <div class = "card-header">
-            <h2>ss</h2>
+    <section class = "card col-3 m-3 bg-dark">
+        <div class = "card-header bg-success">
+            <h3>Robert Saleh</h3>
             <h3> Manager </h3>
         </div>
-        <div class = "card-body bg-primary ">
+        <div class = "card-body bg-success ">
             <ul class = "list-group">
-                <li class = "list-group-item"> Employee ID: ss</li>
-                <li class = "list-group-item"> Email: <a href="mailto:ss">ss</a></li>
-                <li class = "list-group-item"> Office Number: ss</li>
+                <li class = "list-group-item"> Employee ID: 2201</li>
+                <li class = "list-group-item"> Email: <a href="mailto:RobSaleh@gmail.com">RobSaleh@gmail.com</a></li>
+                <li class = "list-group-item"> Office Number: 0122</li>
             </ul>
         </div>
     </section>
 
-    <section class = "card col-3 m-3">
-        <div class = "card-header">
-            <h2>ss</h2>
+    <section class = "card col-3 m-3 bg-dark">
+        <div class = "card-header bg-success">
+            <h3>Dylan Santiago</h3>
             <h3> Engineer </h3>
         </div>
-        <div class = "card-body bg-primary">
+        <div class = "card-body bg-success">
             <ul class = "list-group">
-                <li class = "list-group-item"> Employee ID: ss</li>
-                <li class = "list-group-item"> Email: <a href="mailto:ss">ss</a></li>
-                <li class = "list-group-item"> Github: <a href="https://github.com/ss">ss</a></li>
+                <li class = "list-group-item"> Employee ID: 2202</li>
+                <li class = "list-group-item"> Email: <a href="mailto:2dylansantiago@gmail.com">2dylansantiago@gmail.com</a></li>
+                <li class = "list-group-item"> Github: <a href="https://github.com/DylanSantiago">DylanSantiago</a></li>
             </ul>
         </div>
     </section>
 
-    <section class = "card col-3 m-3">
-        <div class = "card-header">
-            <h2 class = "card-title">ss</h2>
-            <h3 class = "card-title"> Intern </h3>
+    <section class = "card col-3 m-3 bg-dark">
+        <div class = "card-header bg-success">
+            <h3>Zach Wilson</h3>
+            <h3> Intern </h3>
         </div>
-        <div class = "card-body bg-primary">
+        <div class = "card-body bg-success">
             <ul class = "list-group">
-                <li class = "list-group-item"> Employee ID: ss</li>
-                <li class = "list-group-item"> Email: <a href="mailto:ss">ss</a></li>
-                <li class = "list-group-item"> School: s</li>
+                <li class = "list-group-item"> Employee ID: 202</li>
+                <li class = "list-group-item"> Email: <a href="mailto:ZW02@gmail.com">ZW02@gmail.com</a></li>
+                <li class = "list-group-item"> School: BYU</li>
             </ul>
         </div>
     </section>
