--- a/Develop/output/main.html
+++ b/Develop/output/main.html
@@ -8,10 +8,10 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" 
         rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     </head>
-    <body class ="bg-light"
+    <body class ="bg-secondary"
         <section class ="container-fluid"> 
             <section class = "row">
-                <div class = "mt-4 p-5 bg-success text-dark">
+                <div class = "mt-4 p-5 bg-success text-white">
                     <h1 class = "text-center">Company Contact Dashboard</h1>
                 </div>
             </section>
@@ -23,26 +23,26 @@
                 
     <section class = "card col-3 m-3 bg-dark">
         <div class = "card-header bg-success">
-            <h3>Robert Saleh</h3>
+            <h3>Robert S</h3>
             <h3> Manager </h3>
         </div>
         <div class = "card-body bg-success ">
             <ul class = "list-group">
-                <li class = "list-group-item"> Employee ID: 2201</li>
-                <li class = "list-group-item"> Email: <a href="mailto:RobSaleh@gmail.com">RobSaleh@gmail.com</a></li>
-                <li class = "list-group-item"> Office Number: 0122</li>
+                <li class = "list-group-item"> Employee ID: 1001</li>
+                <li class = "list-group-item"> Email: <a href="mailto:RS@gmail.com">RS@gmail.com</a></li>
+                <li class = "list-group-item"> Office Number: 101</li>
             </ul>
         </div>
     </section>
 
     <section class = "card col-3 m-3 bg-dark">
         <div class = "card-header bg-success">
-            <h3>Dylan Santiago</h3>
+            <h3>Dylan S</h3>
             <h3> Engineer </h3>
         </div>
         <div class = "card-body bg-success">
             <ul class = "list-group">
-                <li class = "list-group-item"> Employee ID: 2202</li>
+                <li class = "list-group-item"> Employee ID: 1002</li>
                 <li class = "list-group-item"> Email: <a href="mailto:2dylansantiago@gmail.com">2dylansantiago@gmail.com</a></li>
                 <li class = "list-group-item"> Github: <a href="https://github.com/DylanSantiago">DylanSantiago</a></li>
             </ul>
@@ -51,13 +51,41 @@
 
     <section class = "card col-3 m-3 bg-dark">
         <div class = "card-header bg-success">
-            <h3>Zach Wilson</h3>
+            <h3>Justin R</h3>
+            <h3> Engineer </h3>
+        </div>
+        <div class = "card-body bg-success">
+            <ul class = "list-group">
+                <li class = "list-group-item"> Employee ID: 1003</li>
+                <li class = "list-group-item"> Email: <a href="mailto:justin.ruiz9@me.com">justin.ruiz9@me.com</a></li>
+                <li class = "list-group-item"> Github: <a href="https://github.com/JustinRuiz321">JustinRuiz321</a></li>
+            </ul>
+        </div>
+    </section>
+
+    <section class = "card col-3 m-3 bg-dark">
+        <div class = "card-header bg-success">
+            <h3>Javier V</h3>
             <h3> Intern </h3>
         </div>
         <div class = "card-body bg-success">
             <ul class = "list-group">
-                <li class = "list-group-item"> Employee ID: 202</li>
-                <li class = "list-group-item"> Email: <a href="mailto:ZW02@gmail.com">ZW02@gmail.com</a></li>
+                <li class = "list-group-item"> Employee ID: 1004</li>
+                <li class = "list-group-item"> Email: <a href="mailto:JV@gmail.com">JV@gmail.com</a></li>
+                <li class = "list-group-item"> School: Rutgers</li>
+            </ul>
+        </div>
+    </section>
+
+    <section class = "card col-3 m-3 bg-dark">
+        <div class = "card-header bg-success">
+            <h3>Zach W</h3>
+            <h3> Intern </h3>
+        </div>
+        <div class = "card-body bg-success">
+            <ul class = "list-group">
+                <li class = "list-group-item"> Employee ID: 1004</li>
+                <li class = "list-group-item"> Email: <a href="mailto:ZW@gmail.com">ZW@gmail.com</a></li>
                 <li class = "list-group-item"> School: BYU</li>
             </ul>
         </div>
