--- a/Develop/output/main.html
+++ b/Develop/output/main.html
@@ -8,7 +8,7 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" 
         rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     </head>
-    <body class ="bg-secondary"
+    <body class ="bg-secondary">
         <section class ="container-fluid"> 
             <section class = "row">
                 <div class = "mt-4 p-5 bg-success text-white">
@@ -23,21 +23,21 @@
                 
     <section class = "card col-3 m-3 bg-dark">
         <div class = "card-header bg-success">
-            <h3>Robert S</h3>
+            <h3>Dylan</h3>
             <h3> Manager </h3>
         </div>
         <div class = "card-body bg-success ">
             <ul class = "list-group">
                 <li class = "list-group-item"> Employee ID: 1001</li>
-                <li class = "list-group-item"> Email: <a href="mailto:RS@gmail.com">RS@gmail.com</a></li>
-                <li class = "list-group-item"> Office Number: 101</li>
+                <li class = "list-group-item"> Email: <a href="mailto:2dylansantiago@gmail.com">2dylansantiago@gmail.com</a></li>
+                <li class = "list-group-item"> Office Number: 100</li>
             </ul>
         </div>
     </section>
 
     <section class = "card col-3 m-3 bg-dark">
         <div class = "card-header bg-success">
-            <h3>Dylan S</h3>
+            <h3>Justin</h3>
             <h3> Engineer </h3>
         </div>
         <div class = "card-body bg-success">
@@ -51,42 +51,14 @@
 
     <section class = "card col-3 m-3 bg-dark">
         <div class = "card-header bg-success">
-            <h3>Justin R</h3>
-            <h3> Engineer </h3>
+            <h3>Zach</h3>
+            <h3> Intern </h3>
         </div>
         <div class = "card-body bg-success">
             <ul class = "list-group">
                 <li class = "list-group-item"> Employee ID: 1003</li>
-                <li class = "list-group-item"> Email: <a href="mailto:justin.ruiz9@me.com">justin.ruiz9@me.com</a></li>
-                <li class = "list-group-item"> Github: <a href="https://github.com/JustinRuiz321">JustinRuiz321</a></li>
-            </ul>
-        </div>
-    </section>
-
-    <section class = "card col-3 m-3 bg-dark">
-        <div class = "card-header bg-success">
-            <h3>Javier V</h3>
-            <h3> Intern </h3>
-        </div>
-        <div class = "card-body bg-success">
-            <ul class = "list-group">
-                <li class = "list-group-item"> Employee ID: 1004</li>
-                <li class = "list-group-item"> Email: <a href="mailto:JV@gmail.com">JV@gmail.com</a></li>
+                <li class = "list-group-item"> Email: <a href="mailto:2dylansantiago@gmail.com">2dylansantiago@gmail.com</a></li>
                 <li class = "list-group-item"> School: Rutgers</li>
-            </ul>
-        </div>
-    </section>
-
-    <section class = "card col-3 m-3 bg-dark">
-        <div class = "card-header bg-success">
-            <h3>Zach W</h3>
-            <h3> Intern </h3>
-        </div>
-        <div class = "card-body bg-success">
-            <ul class = "list-group">
-                <li class = "list-group-item"> Employee ID: 1004</li>
-                <li class = "list-group-item"> Email: <a href="mailto:ZW@gmail.com">ZW@gmail.com</a></li>
-                <li class = "list-group-item"> School: BYU</li>
             </ul>
         </div>
     </section>
